--- a/people/v_grondin/index.html
+++ b/people/v_grondin/index.html
@@ -213,20 +213,46 @@
 
 <h1 id="publications">Publications</h1>
 
-<h2 class="bibliography">Conference Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Baril2020">Baril, D., Grondin, V., Deschenes, S., Laconte, J., Vaidis, M., Kubelka, V., Gallant, A., Giguere, P., &amp; Pomerleau, F. (2020). Evaluation of Skid-Steering Kinematic Models for Subarctic Environments. <i>2020 17th Conference on Computer and Robot Vision (CRV)</i>, 198–205. https://doi.org/10.1109/CRV50864.2020.00034</span>
+<h2 class="bibliography">Journal Articles</h2>
+<ol class="bibliography" reversed="reversed"><li><span id="Grondin2022">Grondin, V., Fortin, J.-M., Pomerleau, F., &amp; Giguère, P. (2022). Tree Detection and Diameter Estimation Based on Deep Learning. <i>Forestry: An International Journal of Forest Research</i>.</span> <strong>Major revision, ID Forestry-2022-059</strong>
 
 <br />
 
-<a href="/pdf/Baril2020.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+
+
+<a class="details" href="/bibliography/Grondin2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
+<h2 class="bibliography">Conference Articles</h2>
+<ol class="bibliography" reversed="reversed"><li><span id="Fortin2022">Fortin, J.-M., Gamache, O., Grondin, V., Pomerleau, F., &amp; Giguère, P. (2022). Instance Segmentation for Autonomous Log Grasping in Forestry Operations. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>. https://doi.org/10.48550/ARXIV.2203.01902</span> <strong>Finalist for Best Paper Award on Agri-Robotics! Accepted for oral presentation, arXiv preprint arXiv:2203.01902</strong>
+
+<br />
+
+
+
+<a href="https://arxiv.org/abs/2203.01902" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Fortin2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Baril2020">Baril, D., Grondin, V., Deschenes, S., Laconte, J., Vaidis, M., Kubelka, V., Gallant, A., Giguere, P., &amp; Pomerleau, F. (2020). Evaluation of Skid-Steering Kinematic Models for Subarctic Environments. <i>2020 17th Conference on Computer and Robot Vision (CRV)</i>, 198–205. https://doi.org/10.1109/CRV50864.2020.00034</span> <strong>Best Robotic Vision Paper Award!</strong>
+
+<br />
+
+<a href="/pdf/Baril2020.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
-<a href="https://doi.ieeecomputersociety.org/10.1109/CRV50864.2020.00034"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://doi.ieeecomputersociety.org/10.1109/CRV50864.2020.00034" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Baril2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
+<h2 class="bibliography">Miscellaneous</h2>
+<ol class="bibliography" reversed="reversed"><li><span id="Grondin2022a">Grondin, V., Pomerleau, F., &amp; Giguère, P. (2022). Training Deep Learning Algorithms on Synthetic Forest Images for Tree Detection. In <i>ICRA 2022 Workshop - Innovation in Forestry Robotics: Research and Industry Adoption</i>.</span> <strong></strong>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Grondin2022a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <p>–&gt;</p>
 
 
