--- a/research/libpointmatcher/index.html
+++ b/research/libpointmatcher/index.html
@@ -223,186 +223,186 @@ See it on GitHub
 
 <h1 id="publications">Publications</h1>
 
-<ol class="bibliography" reversed="reversed"><li><span id="Deschenes2021">Deschênes, S.-P., Baril, D., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Lidar Scan Registration Robust to Extreme Motions. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://doi.org/10.1109/CRV52889.2021.00014</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Deschenes2021">Deschênes, S.-P., Baril, D., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Lidar Scan Registration Robust to Extreme Motions. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://doi.org/10.1109/CRV52889.2021.00014</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Deschenes2021.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Deschenes2021.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
-<a href="https://ieeexplore.ieee.org/document/9469459"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://ieeexplore.ieee.org/document/9469459" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Deschenes2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Chahine2020">Chahine, G., Vaidis, M., Pomerleau, F., &amp; Pradalier, C. (2021). Mapping in unstructured natural environment: A sensor fusion framework for wearable sensor suites. <i>SN Applied Sciences</i>, <i>3</i>(5).</span>
+<li><span id="Chahine2020">Chahine, G., Vaidis, M., Pomerleau, F., &amp; Pradalier, C. (2021). Mapping in unstructured natural environment: A sensor fusion framework for wearable sensor suites. <i>SN Applied Sciences</i>, <i>3</i>(5).</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Chahine2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Kubelka2020">Kubelka, V., Dandurand, P., Babin, P., Giguère, P., &amp; Pomerleau, F. (2020). Radio propagation models for differential GNSS based on dense point clouds. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21988</span>
+<li><span id="Kubelka2020">Kubelka, V., Dandurand, P., Babin, P., Giguère, P., &amp; Pomerleau, F. (2020). Radio propagation models for differential GNSS based on dense point clouds. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21988</span> <strong></strong>
 
 <br />
 
 
 
-<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21988"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21988" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Kubelka2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Tremblay2020">Tremblay, J.-F., Béland, M., Pomerleau, F., Gagnon, R., &amp; Giguère, P. (2020). Automatic 3D Mapping for Tree Diameter Measurements in Inventory Operations. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21980</span>
+<li><span id="Tremblay2020">Tremblay, J.-F., Béland, M., Pomerleau, F., Gagnon, R., &amp; Giguère, P. (2020). Automatic 3D Mapping for Tree Diameter Measurements in Inventory Operations. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21980</span> <strong>Special issue: Field and Service Robotics</strong>
 
 <br />
 
 
 
-<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21980"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21980" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Tremblay2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Labussiere2020">Labussière, M., Laconte, J., &amp; Pomerleau, F. (2020). Geometry Preserving Sampling Method based on Spectral Decomposition for Large-scale Environments. <i>Frontiers in Robotics and AI – Multi-Robot Systems</i>, <i>7</i>, 134. https://doi.org/10.3389/frobt.2020.572054</span>
+<li><span id="Labussiere2020">Labussière, M., Laconte, J., &amp; Pomerleau, F. (2020). Geometry Preserving Sampling Method based on Spectral Decomposition for Large-scale Environments. <i>Frontiers in Robotics and AI – Multi-Robot Systems</i>, <i>7</i>, 134. https://doi.org/10.3389/frobt.2020.572054</span> <strong></strong>
 
 <br />
 
 
 
-<a href="https://www.frontiersin.org/article/10.3389/frobt.2020.572054"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://www.frontiersin.org/article/10.3389/frobt.2020.572054" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Labussiere2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Tremblay2019">Tremblay, J.-F., Béland, M., Pomerleau, F., Gagnon, R., &amp; Giguère, P. (2019). Automatic 3D Mapping for Tree Diameter Measurements in Inventory Operations. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span>
+<li><span id="Tremblay2019">Tremblay, J.-F., Béland, M., Pomerleau, F., Gagnon, R., &amp; Giguère, P. (2019). Automatic 3D Mapping for Tree Diameter Measurements in Inventory Operations. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Tremblay2019.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Tremblay2019.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
-<a href="/pdf/Tremblay2019.slides.pdf"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
+<a href="/pdf/Tremblay2019.slides.pdf" target="_blank"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
 &emsp;
 
 
 <a class="details" href="/bibliography/Tremblay2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Dandurand2019">Dandurand, P., Babin, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Predicting GNSS satellite visibility from dense point clouds. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span>
+<li><span id="Dandurand2019">Dandurand, P., Babin, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Predicting GNSS satellite visibility from dense point clouds. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Dandurand2019.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Dandurand2019.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
 <a class="details" href="/bibliography/Dandurand2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Babin2019a">Babin, P., Dandurand, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Large-scale 3D Mapping of Subarctic Forests. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span>
+<li><span id="Babin2019a">Babin, P., Dandurand, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Large-scale 3D Mapping of Subarctic Forests. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Babin2019a.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Babin2019a.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
-<a href="/pdf/Babin2019a.slides.pdf"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
+<a href="/pdf/Babin2019a.slides.pdf" target="_blank"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
 &emsp;
 
 
 <a class="details" href="/bibliography/Babin2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Pradalier2019">Pradalier, C., Aravecchia, S., &amp; Pomerleau, F. (2019). Multi-session lake-shore monitoring in visually challenging conditions. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span>
+<li><span id="Pradalier2019">Pradalier, C., Aravecchia, S., &amp; Pomerleau, F. (2019). Multi-session lake-shore monitoring in visually challenging conditions. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Pradalier2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Landry2019">Landry, D., Pomerleau, F., &amp; Giguère, P. (2019). CELLO-3D: Estimating the Covariance of ICP in the Real World. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>.</span>
+<li><span id="Landry2019">Landry, D., Pomerleau, F., &amp; Giguère, P. (2019). CELLO-3D: Estimating the Covariance of ICP in the Real World. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>.</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Landry2019.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Landry2019.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
 <a class="details" href="/bibliography/Landry2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Babin2019">Babin, P., Giguère, P., &amp; Pomerleau, F. (2019). Analysis of Robust Functions for Registration Algorithms. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://doi.org/10.1109/ICRA.2019.8793791</span>
+<li><span id="Babin2019">Babin, P., Giguère, P., &amp; Pomerleau, F. (2019). Analysis of Robust Functions for Registration Algorithms. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://doi.org/10.1109/ICRA.2019.8793791</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Babin2019.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Babin2019.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
-<a href="https://doi.org/10.1109/ICRA.2019.8793791"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://doi.org/10.1109/ICRA.2019.8793791" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Babin2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Labussiere2019">Labussière, M., Laconte, J., &amp; Pomerleau, F. (2018). Geometry Preserving Sampling Method based on Spectral Decomposition for 3D Registration. In <i>arXiv preprint arXiv:1810.01666</i>.</span>
+<li><span id="Labussiere2019">Labussière, M., Laconte, J., &amp; Pomerleau, F. (2018). Geometry Preserving Sampling Method based on Spectral Decomposition for 3D Registration. In <i>arXiv preprint arXiv:1810.01666</i>.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Labussiere2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Babin2018">Babin, P., Pomerleau, F., &amp; Giguère, P. (2018). <i>Improving the robustness of registration algorithm in complex environments</i>. Colloque du regroupement FRQNT-REPARTI.</span>
+<li><span id="Babin2018">Babin, P., Pomerleau, F., &amp; Giguère, P. (2018). <i>Improving the robustness of registration algorithm in complex environments</i>. Colloque du regroupement FRQNT-REPARTI.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Babin2018/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Landry2018">Landry, D., Pomerleau, F., &amp; Giguère, P. (2018). <i>Data-driven covariance estimation of the iterative closest point algorithm</i>. Rendez-vous en intelligence artificielle de Québec.</span>
+<li><span id="Landry2018">Landry, D., Pomerleau, F., &amp; Giguère, P. (2018). <i>Data-driven covariance estimation of the iterative closest point algorithm</i>. Rendez-vous en intelligence artificielle de Québec.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Landry2018/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Pomerleau2016b">McGarey, P., Pomerleau, F., &amp; Barfoot, T. D. (2016). System design of a tethered robotic explorer (TReX) for 3D mapping of steep terrain and harsh environments. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>, <i>113</i>, 267–281.</span>
+<li><span id="Pomerleau2016b">McGarey, P., Pomerleau, F., &amp; Barfoot, T. D. (2016). System design of a tethered robotic explorer (TReX) for 3D mapping of steep terrain and harsh environments. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>, <i>113</i>, 267–281.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Pomerleau2016b/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Pomerleau2015c">Krüsi, P., Bücheler, B., Pomerleau, F., Schwesinger, U., Siegwart, R., &amp; Furgale, P. (2015). Lighting-invariant adaptive route following using iterative closest point matching. <i>Journal of Field Robotics</i>, <i>32</i>(4), 534–564.</span>
+<li><span id="Pomerleau2015c">Krüsi, P., Bücheler, B., Pomerleau, F., Schwesinger, U., Siegwart, R., &amp; Furgale, P. (2015). Lighting-invariant adaptive route following using iterative closest point matching. <i>Journal of Field Robotics</i>, <i>32</i>(4), 534–564.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Pomerleau2015c/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Pomerleau2015d">Hitz, G., Pomerleau, F., Colas, F., &amp; Siegwart, R. (2015). Relaxing the planar assumption: 3D state estimation for an autonomous surface vessel. <i>International Journal of Robotics Research</i>, <i>34</i>(13), 1604–1621.</span>
+<li><span id="Pomerleau2015d">Hitz, G., Pomerleau, F., Colas, F., &amp; Siegwart, R. (2015). Relaxing the planar assumption: 3D state estimation for an autonomous surface vessel. <i>International Journal of Robotics Research</i>, <i>34</i>(13), 1604–1621.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Pomerleau2015d/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Pomerleau2015a">Pomerleau, F., Colas, F., &amp; Siegwart, R. (2015). A Review of Point Cloud Registration Algorithms for Mobile Robotics. <i>Foundations and Trends in Robotics</i>, <i>4</i>(1), 1–104.</span>
+<li><span id="Pomerleau2015a">Pomerleau, F., Colas, F., &amp; Siegwart, R. (2015). A Review of Point Cloud Registration Algorithms for Mobile Robotics. <i>Foundations and Trends in Robotics</i>, <i>4</i>(1), 1–104.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Pomerleau2015a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Pomerleau2014d">Pomerleau, F., Krüsi, P., Colas, F., Furgale, P., &amp; Siegwart, R. (2014). Long-term 3D map maintenance in dynamic environments. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>, 3712–3719.</span>
+<li><span id="Pomerleau2014d">Pomerleau, F., Krüsi, P., Colas, F., Furgale, P., &amp; Siegwart, R. (2014). Long-term 3D map maintenance in dynamic environments. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>, 3712–3719.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Pomerleau2014d/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Pomerleau2013">Pomerleau, F. (2013). <i>Applied Registration for Robotics: Methodology and Tools for ICP-like Algorithms</i> [PhD thesis]. Eidgenössische Technische Hochschule (ETH) Zurich.</span>
+<li><span id="Pomerleau2013">Pomerleau, F. (2013). <i>Applied Registration for Robotics: Methodology and Tools for ICP-like Algorithms</i> [PhD thesis]. Eidgenössische Technische Hochschule (ETH) Zurich.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Pomerleau2013/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Pomerleau2013b">Pomerleau, F., Colas, F., Siegwart, R., &amp; Magnenat, S. (2013). Comparing ICP variants on real-world data sets: Open-source library and experimental protocol. <i>Autonomous Robots</i>, <i>34</i>(3), 133–148.</span>
+<li><span id="Pomerleau2013b">Pomerleau, F., Colas, F., Siegwart, R., &amp; Magnenat, S. (2013). Comparing ICP variants on real-world data sets: Open-source library and experimental protocol. <i>Autonomous Robots</i>, <i>34</i>(3), 133–148.</span> <strong></strong>
 
 <br />
 
