--- a/people/j_laconte/index.html
+++ b/people/j_laconte/index.html
@@ -262,31 +262,31 @@ His research interests include risk assessment, traversability, applied mathemat
 <h1 id="publications">Publications</h1>
 
 <h2 class="bibliography">Journal Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Baril2022">Baril, D., Deschênes, S.-P., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2022). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>.</span> <strong>Accepted June 7 2022, ID FR-21-0050.R2, arXiv preprint arXiv:2111.13981</strong>
 
 <br />
 
 
 
-<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="laconte2021novel">Laconte, J., Kasmi, A., Pomerleau, F., Chapuis, R., Malaterre, L., Debain, C., &amp; Aufrère, R. (2021). A Novel Occupancy Mapping Framework for Risk-Aware Path Planning in Unstructured Environments. <i>Sensors</i>, <i>21</i>(22), 7562.</span>
+<a class="details" href="/bibliography/Baril2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="laconte2021novel">Laconte, J., Kasmi, A., Pomerleau, F., Chapuis, R., Malaterre, L., Debain, C., &amp; Aufrère, R. (2021). A Novel Occupancy Mapping Framework for Risk-Aware Path Planning in Unstructured Environments. <i>Sensors</i>, <i>21</i>(22), 7562.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/laconte2021novel/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Labussiere2020">Labussière, M., Laconte, J., &amp; Pomerleau, F. (2020). Geometry Preserving Sampling Method based on Spectral Decomposition for Large-scale Environments. <i>Frontiers in Robotics and AI – Multi-Robot Systems</i>, <i>7</i>, 134. https://doi.org/10.3389/frobt.2020.572054</span>
+<li><span id="Labussiere2020">Labussière, M., Laconte, J., &amp; Pomerleau, F. (2020). Geometry Preserving Sampling Method based on Spectral Decomposition for Large-scale Environments. <i>Frontiers in Robotics and AI – Multi-Robot Systems</i>, <i>7</i>, 134. https://doi.org/10.3389/frobt.2020.572054</span> <strong></strong>
 
 <br />
 
 
 
-<a href="https://www.frontiersin.org/article/10.3389/frobt.2020.572054"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://www.frontiersin.org/article/10.3389/frobt.2020.572054" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Labussiere2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="kasmi2020end">Kasmi, A., Laconte, J., Aufrère, R., Denis, D., &amp; Chapuis, R. (2020). End-to-end probabilistic ego-vehicle localization framework. <i>IEEE Transactions on Intelligent Vehicles</i>.</span>
+<li><span id="kasmi2020end">Kasmi, A., Laconte, J., Aufrère, R., Denis, D., &amp; Chapuis, R. (2020). End-to-end probabilistic ego-vehicle localization framework. <i>IEEE Transactions on Intelligent Vehicles</i>.</span> <strong></strong>
 
 <br />
 
@@ -294,44 +294,44 @@ His research interests include risk assessment, traversability, applied mathemat
 
 <a class="details" href="/bibliography/kasmi2020end/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Conference Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="laconte2021dynamic">Laconte, J., Randriamiarintsoa, E., Kasmi, A., Pomerleau, F., Chapuis, R., Debain, C., &amp; Aufrère, R. (2021). Dynamic Lambda-Field: A Counterpart of the Bayesian Occupancy Grid for Risk Assessment in Dynamic Environments. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="laconte2021dynamic">Laconte, J., Randriamiarintsoa, E., Kasmi, A., Pomerleau, F., Chapuis, R., Debain, C., &amp; Aufrère, R. (2021). Dynamic Lambda-Field: A Counterpart of the Bayesian Occupancy Grid for Risk Assessment in Dynamic Environments. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/laconte2021dynamic/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Baril2020">Baril, D., Grondin, V., Deschenes, S., Laconte, J., Vaidis, M., Kubelka, V., Gallant, A., Giguere, P., &amp; Pomerleau, F. (2020). Evaluation of Skid-Steering Kinematic Models for Subarctic Environments. <i>2020 17th Conference on Computer and Robot Vision (CRV)</i>, 198–205. https://doi.org/10.1109/CRV50864.2020.00034</span>
+<li><span id="Baril2020">Baril, D., Grondin, V., Deschenes, S., Laconte, J., Vaidis, M., Kubelka, V., Gallant, A., Giguere, P., &amp; Pomerleau, F. (2020). Evaluation of Skid-Steering Kinematic Models for Subarctic Environments. <i>2020 17th Conference on Computer and Robot Vision (CRV)</i>, 198–205. https://doi.org/10.1109/CRV50864.2020.00034</span> <strong>Best Robotic Vision Paper Award!</strong>
 
 <br />
 
-<a href="/pdf/Baril2020.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Baril2020.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
-<a href="https://doi.ieeecomputersociety.org/10.1109/CRV50864.2020.00034"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://doi.ieeecomputersociety.org/10.1109/CRV50864.2020.00034" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Baril2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="kasmi2020information">Kasmi, A., Laconte, J., Aufrère, R., Theodose, R., Denis, D., &amp; Chapuis, R. (2020). An Information Driven Approach For Ego-Lane Detection Using Lidar And OpenStreetMap. <i>2020 16th International Conference on Control, Automation, Robotics and Vision (ICARCV)</i>, 522–528.</span>
+<li><span id="kasmi2020information">Kasmi, A., Laconte, J., Aufrère, R., Theodose, R., Denis, D., &amp; Chapuis, R. (2020). An Information Driven Approach For Ego-Lane Detection Using Lidar And OpenStreetMap. <i>2020 16th International Conference on Control, Automation, Robotics and Vision (ICARCV)</i>, 522–528.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/kasmi2020information/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Laconte2019">Laconte, J., Deschênes, S.-P., Labussière, M., &amp; Pomerleau, F. (2019). Lidar Measurement Bias Estimation via Return Waveform Modelling in a Context of 3D Mapping. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>.</span>
+<li><span id="Laconte2019">Laconte, J., Deschênes, S.-P., Labussière, M., &amp; Pomerleau, F. (2019). Lidar Measurement Bias Estimation via Return Waveform Modelling in a Context of 3D Mapping. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>.</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Laconte2019.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Laconte2019.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
 <a class="details" href="/bibliography/Laconte2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Laconte2019a">Laconte, J., Debain, C., Chapuis, R., Pomerleau, F., &amp; Aufrere, R. (2019). Lambda-Field: A Continuous Counterpart of the Bayesian Occupancy Grid for Risk Assessment. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>.</span>
+<li><span id="Laconte2019a">Laconte, J., Debain, C., Chapuis, R., Pomerleau, F., &amp; Aufrere, R. (2019). Lambda-Field: A Continuous Counterpart of the Bayesian Occupancy Grid for Risk Assessment. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>.</span> <strong></strong>
 
 <br />
 
@@ -339,14 +339,14 @@ His research interests include risk assessment, traversability, applied mathemat
 
 <a class="details" href="/bibliography/Laconte2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Miscellaneous</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Vaidis2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Labussiere2019">Labussière, M., Laconte, J., &amp; Pomerleau, F. (2018). Geometry Preserving Sampling Method based on Spectral Decomposition for 3D Registration. In <i>arXiv preprint arXiv:1810.01666</i>.</span>
+<li><span id="Labussiere2019">Labussière, M., Laconte, J., &amp; Pomerleau, F. (2018). Geometry Preserving Sampling Method based on Spectral Decomposition for 3D Registration. In <i>arXiv preprint arXiv:1810.01666</i>.</span> <strong></strong>
 
 <br />
 
