--- a/people/p_babin/index.html
+++ b/people/p_babin/index.html
@@ -246,66 +246,66 @@ He then worked on the development of LIDAR SLAM algorithm for a forest mapping a
 <h1 id="publications">Publications</h1>
 
 <h2 class="bibliography">Journal Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Kubelka2020">Kubelka, V., Dandurand, P., Babin, P., Giguère, P., &amp; Pomerleau, F. (2020). Radio propagation models for differential GNSS based on dense point clouds. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21988</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Kubelka2020">Kubelka, V., Dandurand, P., Babin, P., Giguère, P., &amp; Pomerleau, F. (2020). Radio propagation models for differential GNSS based on dense point clouds. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21988</span> <strong></strong>
 
 <br />
 
 
 
-<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21988"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21988" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Kubelka2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Conference Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Dandurand2019">Dandurand, P., Babin, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Predicting GNSS satellite visibility from dense point clouds. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Dandurand2019">Dandurand, P., Babin, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Predicting GNSS satellite visibility from dense point clouds. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Dandurand2019.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Dandurand2019.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
 <a class="details" href="/bibliography/Dandurand2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Babin2019a">Babin, P., Dandurand, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Large-scale 3D Mapping of Subarctic Forests. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span>
+<li><span id="Babin2019a">Babin, P., Dandurand, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Large-scale 3D Mapping of Subarctic Forests. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Babin2019a.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Babin2019a.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
-<a href="/pdf/Babin2019a.slides.pdf"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
+<a href="/pdf/Babin2019a.slides.pdf" target="_blank"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
 &emsp;
 
 
 <a class="details" href="/bibliography/Babin2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Babin2019">Babin, P., Giguère, P., &amp; Pomerleau, F. (2019). Analysis of Robust Functions for Registration Algorithms. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://doi.org/10.1109/ICRA.2019.8793791</span>
+<li><span id="Babin2019">Babin, P., Giguère, P., &amp; Pomerleau, F. (2019). Analysis of Robust Functions for Registration Algorithms. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://doi.org/10.1109/ICRA.2019.8793791</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Babin2019.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Babin2019.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
-<a href="https://doi.org/10.1109/ICRA.2019.8793791"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://doi.org/10.1109/ICRA.2019.8793791" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Babin2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Theses</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Babin2019b">Babin, P. (2019). <i>Analysis of error functions for the iterative closest point algorithm</i> [Master's thesis, Université Laval]. https://corpus.ulaval.ca/jspui/handle/20.500.11794/37990?mode=full</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Babin2019b">Babin, P. (2019). <i>Analysis of error functions for the iterative closest point algorithm</i> [Master's thesis, Université Laval]. https://corpus.ulaval.ca/jspui/handle/20.500.11794/37990?mode=full</span> <strong></strong>
 
 <br />
 
 
 
-<a href="https://corpus.ulaval.ca/jspui/handle/20.500.11794/37990?mode=full"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://corpus.ulaval.ca/jspui/handle/20.500.11794/37990?mode=full" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Babin2019b/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Miscellaneous</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Babin2018">Babin, P., Pomerleau, F., &amp; Giguère, P. (2018). <i>Improving the robustness of registration algorithm in complex environments</i>. Colloque du regroupement FRQNT-REPARTI.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Babin2018">Babin, P., Pomerleau, F., &amp; Giguère, P. (2018). <i>Improving the robustness of registration algorithm in complex environments</i>. Colloque du regroupement FRQNT-REPARTI.</span> <strong></strong>
 
 <br />
 
