--- a/people/v_kubelka/index.html
+++ b/people/v_kubelka/index.html
@@ -233,147 +233,170 @@
 <h1 id="publications">Publications</h1>
 
 <h2 class="bibliography">Journal Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Baril2022">Baril, D., Deschênes, S.-P., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2022). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>.</span> <strong>Accepted June 7 2022, ID FR-21-0050.R2, arXiv preprint arXiv:2111.13981</strong>
 
 <br />
 
 
 
-<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Kubelka2020">Kubelka, V., Dandurand, P., Babin, P., Giguère, P., &amp; Pomerleau, F. (2020). Radio propagation models for differential GNSS based on dense point clouds. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21988</span>
+<a class="details" href="/bibliography/Baril2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Roucek2021">Rouček, T., Pecka, M., Čížek, P., Petříček, T., Bayer, J., Šalanský, V., Azayev, T., Heřt, D., Petrlík, M., Báča, T., Spurný, V., Krátký, V., Petráček, P., Baril, D., Vaidis, M., Kubelka, V., Pomerleau, F., Faigl, J., Zimmermann, K., … Krajník, T. (2021). System for multi-robotic exploration of underground environments CTU-CRAS-NORLAB in the DARPA Subterranean Challenge. <i>Field Robotics</i>. https://doi.org/10.48550/ARXIV.2110.05911</span> <strong>Accepted June 28 2021, ID FR-21-0003.R1, arXiv preprint arXiv:2110:05911</strong>
+
+<br />
+
+<a href="/pdf/Roucek2021.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
+
+
+
+<a href="https://arxiv.org/abs/2110.05911" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Roucek2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Kubelka2020">Kubelka, V., Dandurand, P., Babin, P., Giguère, P., &amp; Pomerleau, F. (2020). Radio propagation models for differential GNSS based on dense point clouds. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21988</span> <strong></strong>
 
 <br />
 
 
 
-<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21988"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21988" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Kubelka2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="kubelka2016improving">Kubelka, V., Reinstein, M., &amp; Svoboda, T. (2016). Improving multimodal data fusion for mobile robots by trajectory smoothing. <i>Robotics and Autonomous Systems</i>, <i>84</i>, 88–96.</span>
+<li><span id="kubelka2016improving">Kubelka, V., Reinstein, M., &amp; Svoboda, T. (2016). Improving multimodal data fusion for mobile robots by trajectory smoothing. <i>Robotics and Autonomous Systems</i>, <i>84</i>, 88–96.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/kubelka2016improving/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="simanek2015evaluation">Simanek, J., Reinstein, M., &amp; Kubelka, V. (2015). Evaluation of the EKF-based estimation architectures for data fusion in mobile robots. <i>IEEE/ASME Transactions on Mechatronics</i>, <i>20</i>(2), 985–990.</span>
+<li><span id="Pomerleau2015e">Kubelka, V., Oswald, L., Pomerleau, F., Colas, F., Svoboda, T., &amp; Reinstein, M. (2015). Robust data fusion of multimodal sensory information for mobile robots. <i>Journal of Field Robotics</i>, <i>32</i>(4), 447–473.</span> <strong></strong>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Pomerleau2015e/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="simanek2015evaluation">Simanek, J., Reinstein, M., &amp; Kubelka, V. (2015). Evaluation of the EKF-based estimation architectures for data fusion in mobile robots. <i>IEEE/ASME Transactions on Mechatronics</i>, <i>20</i>(2), 985–990.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/simanek2015evaluation/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="simanek2015improving">Simanek, J., Kubelka, V., &amp; Reinstein, M. (2015). Improving multi-modal data fusion by anomaly detection. <i>Autonomous Robots</i>, <i>39</i>(2), 139–154.</span>
+<li><span id="simanek2015improving">Simanek, J., Kubelka, V., &amp; Reinstein, M. (2015). Improving multi-modal data fusion by anomaly detection. <i>Autonomous Robots</i>, <i>39</i>(2), 139–154.</span> <strong></strong>
 
 <br />
 
 
 
-<a class="details" href="/bibliography/simanek2015improving/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Pomerleau2015e">Kubelka, V., Oswald, L., Pomerleau, F., Colas, F., Svoboda, T., &amp; Reinstein, M. (2015). Robust data fusion of multimodal sensory information for mobile robots. <i>Journal of Field Robotics</i>, <i>32</i>(4), 447–473.</span>
-
-<br />
-
-
-
-<a class="details" href="/bibliography/Pomerleau2015e/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
+<a class="details" href="/bibliography/simanek2015improving/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Conference Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2021">Vaidis, M., Giguère, P., Pomerleau, F., &amp; Kubelka, V. (2021). Accurate outdoor ground truth based on total stations. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://arxiv.org/abs/2104.14396</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Kubelka2022">Kubelka, V., Vaidis, M., &amp; Pomerleau, F. (2022). Gravity-constrained point cloud registration. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>. https://doi.org/10.48550/ARXIV.2203.13799</span> <strong>Accepted for oral presentation, arXiv preprint arXiv:2203.01902</strong>
 
 <br />
 
 
 
-<a href="https://arxiv.org/abs/2104.14396"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://arxiv.org/abs/2203.13799" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Kubelka2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Vaidis2021">Vaidis, M., Giguère, P., Pomerleau, F., &amp; Kubelka, V. (2021). Accurate outdoor ground truth based on total stations. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://arxiv.org/abs/2104.14396</span> <strong></strong>
+
+<br />
+
+
+
+<a href="https://arxiv.org/abs/2104.14396" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Vaidis2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Deschenes2021">Deschênes, S.-P., Baril, D., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Lidar Scan Registration Robust to Extreme Motions. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://doi.org/10.1109/CRV52889.2021.00014</span>
+<li><span id="Deschenes2021">Deschênes, S.-P., Baril, D., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Lidar Scan Registration Robust to Extreme Motions. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://doi.org/10.1109/CRV52889.2021.00014</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Deschenes2021.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Deschenes2021.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
-<a href="https://ieeexplore.ieee.org/document/9469459"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://ieeexplore.ieee.org/document/9469459" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Deschenes2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Baril2020">Baril, D., Grondin, V., Deschenes, S., Laconte, J., Vaidis, M., Kubelka, V., Gallant, A., Giguere, P., &amp; Pomerleau, F. (2020). Evaluation of Skid-Steering Kinematic Models for Subarctic Environments. <i>2020 17th Conference on Computer and Robot Vision (CRV)</i>, 198–205. https://doi.org/10.1109/CRV50864.2020.00034</span>
+<li><span id="Baril2020">Baril, D., Grondin, V., Deschenes, S., Laconte, J., Vaidis, M., Kubelka, V., Gallant, A., Giguere, P., &amp; Pomerleau, F. (2020). Evaluation of Skid-Steering Kinematic Models for Subarctic Environments. <i>2020 17th Conference on Computer and Robot Vision (CRV)</i>, 198–205. https://doi.org/10.1109/CRV50864.2020.00034</span> <strong>Best Robotic Vision Paper Award!</strong>
 
 <br />
 
-<a href="/pdf/Baril2020.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Baril2020.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
-<a href="https://doi.ieeecomputersociety.org/10.1109/CRV50864.2020.00034"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://doi.ieeecomputersociety.org/10.1109/CRV50864.2020.00034" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Baril2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Roucek2019">Roucek, T., Pecka, M., Cizek, P., Petricek, T., Bayer, J., Salansky, V., Hert, D., Petrlik, M., Baca, T., Spurny, V., Pomerleau, F., Kubelka, V., Faigl, J., Zimmermann, K., Saska, M., Svoboda, T., &amp; Krajnik, T. (2019). DARPA Subterranean Challenge: Multi-robotic exploration of underground environments. <i>Proceeding of the Modelling and Simulation for Autonomous System Workshop (MESAS)</i>.</span>
+<li><span id="Babin2019a">Babin, P., Dandurand, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Large-scale 3D Mapping of Subarctic Forests. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
+
+<br />
+
+<a href="/pdf/Babin2019a.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
+
+
+<a href="/pdf/Babin2019a.slides.pdf" target="_blank"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
+&emsp;
+
+
+<a class="details" href="/bibliography/Babin2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Roucek2019">Roucek, T., Pecka, M., Cizek, P., Petricek, T., Bayer, J., Salansky, V., Hert, D., Petrlik, M., Baca, T., Spurny, V., Pomerleau, F., Kubelka, V., Faigl, J., Zimmermann, K., Saska, M., Svoboda, T., &amp; Krajnik, T. (2019). DARPA Subterranean Challenge: Multi-robotic exploration of underground environments. <i>Proceeding of the Modelling and Simulation for Autonomous System Workshop (MESAS)</i>.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Roucek2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Dandurand2019">Dandurand, P., Babin, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Predicting GNSS satellite visibility from dense point clouds. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span>
+<li><span id="Dandurand2019">Dandurand, P., Babin, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Predicting GNSS satellite visibility from dense point clouds. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Dandurand2019.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Dandurand2019.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
 <a class="details" href="/bibliography/Dandurand2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Babin2019a">Babin, P., Dandurand, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Large-scale 3D Mapping of Subarctic Forests. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span>
-
-<br />
-
-<a href="/pdf/Babin2019a.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
-&emsp;
-
-
-<a href="/pdf/Babin2019a.slides.pdf"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
-&emsp;
-
-
-<a class="details" href="/bibliography/Babin2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="kruijff2016deployment">Kruijff-Korbayová, I., Freda, L., Gianni, M., Ntouskos, V., Hlaváč, V., Kubelka, V., Zimmermann, E., Surmann, H., Dulic, K., Rottner, W., &amp; others. (2016). Deployment of ground and aerial robots in earthquake-struck amatrice in italy (brief report). <i>2016 IEEE International Symposium on Safety, Security, and Rescue Robotics (SSRR)</i>, 278–279.</span>
+<li><span id="kruijff2016deployment">Kruijff-Korbayová, I., Freda, L., Gianni, M., Ntouskos, V., Hlaváč, V., Kubelka, V., Zimmermann, E., Surmann, H., Dulic, K., Rottner, W., &amp; others. (2016). Deployment of ground and aerial robots in earthquake-struck amatrice in italy (brief report). <i>2016 IEEE International Symposium on Safety, Security, and Rescue Robotics (SSRR)</i>, 278–279.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/kruijff2016deployment/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="jirkuu2016wifi">Jirku, M., Kubelka, V., &amp; Reinstein, M. (2016). WiFi localization in 3D. <i>2016 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 4551–4557.</span>
+<li><span id="jirkuu2016wifi">Jirku, M., Kubelka, V., &amp; Reinstein, M. (2016). WiFi localization in 3D. <i>2016 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 4551–4557.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/jirkuu2016wifi/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="kubelka2014combining">Kubelka, V., &amp; Reinstein, M. (2014). Combining Complementary Motion Estimation Approaches to Increase Reliability in Urban Search &amp; Rescue Missions. <i>International Workshop on Modelling and Simulation for Autonomous Systems</i>, 347–356.</span>
+<li><span id="kubelka2014combining">Kubelka, V., &amp; Reinstein, M. (2014). Combining Complementary Motion Estimation Approaches to Increase Reliability in Urban Search &amp; Rescue Missions. <i>International Workshop on Modelling and Simulation for Autonomous Systems</i>, 347–356.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/kubelka2014combining/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="reinstein2013terrain">Reinstein, M., Kubelka, V., &amp; Zimmermann, K. (2013). Terrain adaptive odometry for mobile skid-steer robots. <i>2013 IEEE International Conference on Robotics and Automation</i>, 4706–4711.</span>
+<li><span id="reinstein2013terrain">Reinstein, M., Kubelka, V., &amp; Zimmermann, K. (2013). Terrain adaptive odometry for mobile skid-steer robots. <i>2013 IEEE International Conference on Robotics and Automation</i>, 4706–4711.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/reinstein2013terrain/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="kubelka2012complementary">Kubelka, V., &amp; Reinstein, M. (2012). Complementary filtering approach to orientation estimation using inertial sensors only. <i>2012 IEEE International Conference on Robotics and Automation</i>, 599–605.</span>
+<li><span id="kubelka2012complementary">Kubelka, V., &amp; Reinstein, M. (2012). Complementary filtering approach to orientation estimation using inertial sensors only. <i>2012 IEEE International Conference on Robotics and Automation</i>, 599–605.</span> <strong></strong>
 
 <br />
 
@@ -381,7 +404,7 @@
 
 <a class="details" href="/bibliography/kubelka2012complementary/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Miscellaneous</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span> <strong></strong>
 
 <br />
 
