--- a/publications/forest-mapping/index.html
+++ b/publications/forest-mapping/index.html
@@ -241,25 +241,25 @@ We conclude that our mapping method is usable in the context of automated forest
 
 <h1 id="publications">Publications</h1>
 
-<ol class="bibliography" reversed="reversed"><li><span id="Tremblay2020">Tremblay, J.-F., Béland, M., Pomerleau, F., Gagnon, R., &amp; Giguère, P. (2020). Automatic 3D Mapping for Tree Diameter Measurements in Inventory Operations. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21980</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Tremblay2020">Tremblay, J.-F., Béland, M., Pomerleau, F., Gagnon, R., &amp; Giguère, P. (2020). Automatic 3D Mapping for Tree Diameter Measurements in Inventory Operations. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21980</span> <strong>Special issue: Field and Service Robotics</strong>
 
 <br />
 
 
 
-<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21980"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21980" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Tremblay2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Tremblay2019">Tremblay, J.-F., Béland, M., Pomerleau, F., Gagnon, R., &amp; Giguère, P. (2019). Automatic 3D Mapping for Tree Diameter Measurements in Inventory Operations. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span>
+<li><span id="Tremblay2019">Tremblay, J.-F., Béland, M., Pomerleau, F., Gagnon, R., &amp; Giguère, P. (2019). Automatic 3D Mapping for Tree Diameter Measurements in Inventory Operations. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Tremblay2019.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Tremblay2019.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
-<a href="/pdf/Tremblay2019.slides.pdf"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
+<a href="/pdf/Tremblay2019.slides.pdf" target="_blank"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
 &emsp;
 
 
