--- a/publications/satellite-visibility/index.html
+++ b/publications/satellite-visibility/index.html
@@ -207,21 +207,21 @@
 
 <h1 id="publications">Publications</h1>
 
-<ol class="bibliography" reversed="reversed"><li><span id="Kubelka2020">Kubelka, V., Dandurand, P., Babin, P., Giguère, P., &amp; Pomerleau, F. (2020). Radio propagation models for differential GNSS based on dense point clouds. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21988</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Kubelka2020">Kubelka, V., Dandurand, P., Babin, P., Giguère, P., &amp; Pomerleau, F. (2020). Radio propagation models for differential GNSS based on dense point clouds. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21988</span> <strong></strong>
 
 <br />
 
 
 
-<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21988"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21988" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Kubelka2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Dandurand2019">Dandurand, P., Babin, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Predicting GNSS satellite visibility from dense point clouds. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span>
+<li><span id="Dandurand2019">Dandurand, P., Babin, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Predicting GNSS satellite visibility from dense point clouds. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
 
 <br />
 
-<a href="/pdf/Dandurand2019.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Dandurand2019.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
