--- a/research/scutigera/index.html
+++ b/research/scutigera/index.html
@@ -206,21 +206,21 @@ Depending on the speed ratio between the robot and the 3D scanner, solutions alo
 
 <h1 id="references">References</h1>
 
-<ol class="bibliography" reversed="reversed"><li><span id="DStOnge2017">St-Onge, D., Brèches, P.-Y., Sharf, I., Reeves, N., Rekleitis, I., Abouzakhm, P., Girdhar, Y., Harmat, A., Dudek, G., &amp; Giguère, P. (2017). Control, localization and human interaction with an autonomous lighter-than-air performer. <i>Robotic and Autonomous Systems</i>, <i>88</i>, 165–186.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="DStOnge2017">St-Onge, D., Brèches, P.-Y., Sharf, I., Reeves, N., Rekleitis, I., Abouzakhm, P., Girdhar, Y., Harmat, A., Dudek, G., &amp; Giguère, P. (2017). Control, localization and human interaction with an autonomous lighter-than-air performer. <i>Robotic and Autonomous Systems</i>, <i>88</i>, 165–186.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/DStOnge2017/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Zhang2015">Zhang, J., &amp; Singh, S. (2015). LOAM: Lidar odometry and mapping in real-time. <i>IEEE Transactions on Robotics</i>, <i>32</i>(7), 141–148.</span>
+<li><span id="Zhang2015">Zhang, J., &amp; Singh, S. (2015). LOAM: Lidar odometry and mapping in real-time. <i>IEEE Transactions on Robotics</i>, <i>32</i>(7), 141–148.</span> <strong></strong>
 
 <br />
 
 
 
 <a class="details" href="/bibliography/Zhang2015/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Pomerleau2013b">Pomerleau, F., Colas, F., Siegwart, R., &amp; Magnenat, S. (2013). Comparing ICP variants on real-world data sets: Open-source library and experimental protocol. <i>Autonomous Robots</i>, <i>34</i>(3), 133–148.</span>
+<li><span id="Pomerleau2013b">Pomerleau, F., Colas, F., Siegwart, R., &amp; Magnenat, S. (2013). Comparing ICP variants on real-world data sets: Open-source library and experimental protocol. <i>Autonomous Robots</i>, <i>34</i>(3), 133–148.</span> <strong></strong>
 
 <br />
 
