--- a/research/snow/index.html
+++ b/research/snow/index.html
@@ -204,33 +204,50 @@ the UGV in a snow-covered forest.</li>
 
 <h1 id="publications">Publications</h1>
 
-<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Pomerleau2022">Pomerleau, F. (2022). Robotics in Snow and Ice. In M. H. Ang, O. Khatib, &amp; B. Siciliano (Eds.), <i>Encyclopedia of Robotics</i> (pp. 1–6). Springer Berlin Heidelberg.</span> <strong>Major revision</strong>
 
 <br />
 
 
 
-<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Vaidis2021">Vaidis, M., Giguère, P., Pomerleau, F., &amp; Kubelka, V. (2021). Accurate outdoor ground truth based on total stations. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://arxiv.org/abs/2104.14396</span>
+<a class="details" href="/bibliography/Pomerleau2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Kubelka2022">Kubelka, V., Vaidis, M., &amp; Pomerleau, F. (2022). Gravity-constrained point cloud registration. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>. https://doi.org/10.48550/ARXIV.2203.13799</span> <strong>Accepted for oral presentation, arXiv preprint arXiv:2203.01902</strong>
 
 <br />
 
 
 
-<a href="https://arxiv.org/abs/2104.14396"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://arxiv.org/abs/2203.13799" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Kubelka2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Baril2022">Baril, D., Deschênes, S.-P., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2022). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>.</span> <strong>Accepted June 7 2022, ID FR-21-0050.R2, arXiv preprint arXiv:2111.13981</strong>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Baril2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Vaidis2021">Vaidis, M., Giguère, P., Pomerleau, F., &amp; Kubelka, V. (2021). Accurate outdoor ground truth based on total stations. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://arxiv.org/abs/2104.14396</span> <strong></strong>
+
+<br />
+
+
+
+<a href="https://arxiv.org/abs/2104.14396" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Vaidis2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Baril2020">Baril, D., Grondin, V., Deschenes, S., Laconte, J., Vaidis, M., Kubelka, V., Gallant, A., Giguere, P., &amp; Pomerleau, F. (2020). Evaluation of Skid-Steering Kinematic Models for Subarctic Environments. <i>2020 17th Conference on Computer and Robot Vision (CRV)</i>, 198–205. https://doi.org/10.1109/CRV50864.2020.00034</span>
+<li><span id="Baril2020">Baril, D., Grondin, V., Deschenes, S., Laconte, J., Vaidis, M., Kubelka, V., Gallant, A., Giguere, P., &amp; Pomerleau, F. (2020). Evaluation of Skid-Steering Kinematic Models for Subarctic Environments. <i>2020 17th Conference on Computer and Robot Vision (CRV)</i>, 198–205. https://doi.org/10.1109/CRV50864.2020.00034</span> <strong>Best Robotic Vision Paper Award!</strong>
 
 <br />
 
-<a href="/pdf/Baril2020.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+<a href="/pdf/Baril2020.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
 &emsp;
 
 
 
-<a href="https://doi.ieeecomputersociety.org/10.1109/CRV50864.2020.00034"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+<a href="https://doi.ieeecomputersociety.org/10.1109/CRV50864.2020.00034" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
 &emsp;
 
 <a class="details" href="/bibliography/Baril2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
