--- a/bibliography/Babin2019/index.html
+++ b/bibliography/Babin2019/index.html
@@ -186,6 +186,7 @@
   <span class="c">title = {Analysis of Robust Functions for Registration Algorithms},</span>
   <span class="c">booktitle = {Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)},</span>
   <span class="c">year = {2019},</span>
+  <span class="c">doi = {10.1109/ICRA.2019.8793791},</span>
   <span class="c">author = {Babin, P. and Gigu\`{e}re, P. and Pomerleau, F.},</span>
   <span class="c">project = {libpointmatcher}</span>
 <span class="c">}</span>
