--- a/bibliography/Baril2020/index.html
+++ b/bibliography/Baril2020/index.html
@@ -188,6 +188,7 @@
   <span class="c">title = {Evaluation of Skid-Steering Kinematic Models for Subarctic Environments},</span>
   <span class="c">year = {2020},</span>
   <span class="c">pages = {198-205},</span>
+  <span class="c">doi = {10.1109/CRV50864.2020.00034},</span>
   <span class="c">publisher = {IEEE Computer Society},</span>
   <span class="c">month = may,</span>
   <span class="c">note = {Best Robotic Vision Paper Award!},</span>
