--- a/bibliography/Kubelka2020/index.html
+++ b/bibliography/Kubelka2020/index.html
@@ -187,6 +187,7 @@
   <span class="c">keywords = {forestry, global navigation satellite system, localization, radio propagation model, terrestrial robotics},</span>
   <span class="c">project = {satellite_visibility, libpointmatcher},</span>
   <span class="c">note = {},</span>
+  <span class="c">doi = {10.1002/rob.21988},</span>
   <span class="c">eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/rob.21988}</span>
 <span class="c">}</span>
 <span class="c"></span></code></pre></figure>
