--- a/bibliography/Tremblay2020/index.html
+++ b/bibliography/Tremblay2020/index.html
@@ -187,7 +187,7 @@
   <span class="c">project = {forest_mapping,libpointmatcher},</span>
   <span class="c">keywords = {cylinder fitting, field robotics, forestry, ICP, lidar, mapping, registration},</span>
   <span class="c">note = {Special issue: Field and Service Robotics},</span>
-  <span class="c">eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/rob.21980}</span>
+  <span class="c">doi = {10.1002/rob.21980}</span>
 <span class="c">}</span>
 <span class="c"></span></code></pre></figure>
 				</p>
