--- a/bibliography/Deschenes2021/index.html
+++ b/bibliography/Deschenes2021/index.html
@@ -187,6 +187,7 @@
   <span class="c">booktitle = {2021 18th Conference on Robots and Vision (CRV)},</span>
   <span class="c">title = {Lidar Scan Registration Robust to Extreme Motions},</span>
   <span class="c">year = {2021},</span>
+  <span class="c">doi = {10.1109/CRV52889.2021.00014},</span>
   <span class="c">project = {libpointmatcher}</span>
 <span class="c">}</span>
 <span class="c"></span></code></pre></figure>
