--- a/bibliography/McGarey2017/index.html
+++ b/bibliography/McGarey2017/index.html
@@ -187,6 +187,7 @@
   <span class="c">number = {12},</span>
   <span class="c">pages = {1363-1386},</span>
   <span class="c">year = {2017},</span>
+  <span class="c">doi = {10.1177/0278364917732639},</span>
   <span class="c">eprint = {https://doi.org/10.1177/0278364917732639},</span>
   <span class="c">project = {trex}</span>
 <span class="c">}</span>
