--- a/bibliography/laconte2021dynamic/index.html
+++ b/bibliography/laconte2021dynamic/index.html
@@ -183,7 +183,7 @@
   <span class="c">title = {Dynamic Lambda-Field: A Counterpart of the Bayesian Occupancy Grid for Risk Assessment in Dynamic Environments},</span>
   <span class="c">author = {Laconte, Johann and Randriamiarintsoa, Elie and Kasmi, Abderrahim and Pomerleau, Fran{\c{c}}ois and Chapuis, Roland and Debain, Christophe and Aufr{\`e}re, Romuald},</span>
   <span class="c">booktitle = {Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)},</span>
-  <span class="c">year = {2021}</span>
+  <span class="c">year = {2021},</span>
 <span class="c">}</span>
 <span class="c"></span></code></pre></figure>
 				</p>
