--- a/bibliography/laconte2021novel/index.html
+++ b/bibliography/laconte2021novel/index.html
@@ -187,7 +187,7 @@
   <span class="c">number = {22},</span>
   <span class="c">pages = {7562},</span>
   <span class="c">year = {2021},</span>
-  <span class="c">publisher = {Multidisciplinary Digital Publishing Institute}</span>
+  <span class="c">publisher = {Multidisciplinary Digital Publishing Institute},</span>
 <span class="c">}</span>
 <span class="c"></span></code></pre></figure>
 				</p>
